[package]
name = "memtrace-utils"
version = "0.4.0"
edition = "2024"
homepage = "https://github.com/blkmlk/memtrace-utils"
license = "MIT"
description = "A library with utils for parsing heap tracing files"
keywords = ["dylib", "heaptrack", "utils", "memtrack", "heap"]
categories = ["os", "text-processing", "network-programming"]
repository = "https://github.com/blkmlk/memtrace-utils"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
thiserror = "2.0"
indexmap = "2.7"
nix = { version = "0.30.1", features = ["fs"] }
addr2line = "0.24"
rangemap = "1.5"
rustc-demangle = "0.1"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["blocking"] }